--- a/DEVISESYSTEMS/css/style.css
+++ b/DEVISESYSTEMS/css/style.css
@@ -305,3 +305,10 @@ nav#tf-footer {
 	padding: 3% 0 2% 0;
 	color: #f1f1f1;
 }
+
+<div id="contact">
+            <div class="line">
+                  <div class="margin">
+                  <div class="s-5 m-5 l-3 hide-m hide-s margin-bottom center-align">
+                    <img src="img/contact.jpg" alt="">
+                  </div>
